# superteam_workshop

./: .gitignore  QUICK-REFERENCE.md  README.md  WORKSHOP-GUIDE.md  WORKSHOP-INDEX.md  WORKSHOP-STRUCTURE-REVIEW.md  skills-lock.json
02-hooks/examples/: codegen-after-idl.json  lint-on-save.json
02-specs-solana/: README.md  example-swap-dapp-spec.md
03-steering/examples/: coding-standards.md  solana-patterns.md  solana-security.md
04-mcp/: example-mcp-config.json
07-modern-workflow/: README.md
08-deployment/: README.md
09-openclaw-integration/: ARCHITECTURE-DIAGRAM.md  COMPLETION-SUMMARY.md  OLLAMA-INTEGRATION-SUMMARY.md  OLLAMA-SETUP.md  QUICK-START.md  README.md  troubleshooting.md
09-openclaw-integration/deep-dive/: 01-architecture.md  02-channels.md  06-production.md
09-openclaw-integration/examples/: deployment-pipeline.md
12-openrouter-agents/: quick-start.md
13-pitch-deck-design/: README.md
14-helius-apis/: get-transactions-guide.md  indexing-guide.md
15-solana-mobile/: README.md
example-app/: .env.example  Anchor.toml  DEPLOYMENT.md  PINOCCHIO-COMPARISON.md  PROGRAM-SETUP.md  README.md  SETUP.md  next.config.mjs  package.json
example-app/programs/guestbook/: Cargo.toml
example-app/programs/guestbook-pinocchio/: Cargo.toml
example-app/programs/guestbook-pinocchio/src/: lib.rs
example-app/programs/guestbook/src/: lib.rs
workshop-website/: .env.example  AUDIT-FEATURE.md  FEATURES.md  OLLAMA-SETUP.md  README.md  SETUP-AUDIT.md  VERCEL-DEPLOYMENT.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+101 files in other folders)
