[package]
name = "guestbook"
version = "0.1.0"
description = "Simple guestbook program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "guestbook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
